conv-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  lables:
    components: frontend
spec:
  containers:
    - name: short-app
      image: antonlarichev/conv-app:latest
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
