conv-converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
  namespace: conv-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
        - name: converter
          image: antonlarichev/conv-service:1.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
