rabbit-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-deployment
  namespace: conv-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
        - name: rabbit
          image: rabbitmq:3.12-management
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672
            - containerPort: 5672
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: rabbit-pvc
              mountPath: /var/lib/rabbitmq
              subPath: rabbit
      volumes:
        - name: rabbit-pvc
          persistentVolumeClaim:
            claimName: rabbit-pvc
