short-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-api-deployment
  namespace: short-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: short-api-pvc
          persistentVolumeClaim:
            claimName: short-api-pvc
      containers:
      - name: short-api
        image: antonlarichev/short-api:1.0
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
        ports:
          - containerPort: 3000
