api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-api-cluster-ip
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: backend
