conv-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-cluster-ip
  namespace: conv-app-namespace
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: backend
