postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip
  namespace: short-app-namespace
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: postgres
