short-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app-cluster-ip
  namespace: short-app-namespace
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: frontend
