conv-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conv-app-ingress
  namespace: conv-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: conv.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: conv-app-cluster-ip
                port:
                  number: 80
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: conv-api-cluster-ip
                port:
                  number: 3000
